<resources>
    <string name="app_name">F5_DAVIES_GARCIA-LAMOUREUX_MinecraftServerViewer</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Minecraft Servers</string>
    <string name="second_fragment_label">New server</string>
    <string name="fragment_server_details_label">Server</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="unknown">Unknown</string>

    <string name="title_list">Saved Servers</string>
    <string name="adding_server">Adding a server. Arg: %1$s</string>
    <string name="creation_server_name">Server name</string>
    <string name="creation_hostname_field">minecraft.example.com</string>
    <string name="creation_port">Port</string>
    <string name="creation_ipv4">IPv4</string>
    <string name="creation_hostname">Hostname</string>
    <string name="creation_server_name_field">MyServer</string>
    <string name="creation_ipv4_field">127.0.0.1</string>
    <string name="creation_port_field">25565</string>

    <string name="toast_server_added">Server added!</string>
    <string name="toast_server_exists">Server already exists!</string>
    <string name="toast_connection_impossible">Could not connect</string>

    <string name="details_status">Status:</string>
    <string name="details_players">Players:</string>
    <string name="details_version">Version:</string>
    <string name="details_hostname">Hostname</string>
    <string name="details_ip_port">IP/Port:</string>
    <string name="details_delete">Delete?</string>
    <string name="details_undefined_hostname">Undefined hostname</string>
    <string name="details_unknown_ip_port">Unknown</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_server_add_button">Server add button</string>
    <string name="fragment_server_delete_button">Server delete button</string>

</resources>