<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddServerFragment">

    <TextView
        android:id="@+id/textview_creation_server_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/creation_server_name"
        app:layout_constraintStart_toStartOf="@+id/textInput_server_name_field"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_creation_hostname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/creation_hostname"
        app:layout_constraintStart_toStartOf="@+id/textInput_hostname_field"
        app:layout_constraintTop_toBottomOf="@+id/textInput_ipv4_field" />

    <TextView
        android:id="@+id/textview_creation_ipv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/creation_ipv4"
        app:layout_constraintStart_toStartOf="@+id/textInput_ipv4_field"
        app:layout_constraintTop_toBottomOf="@+id/textInput_server_name_field" />

    <TextView
        android:id="@+id/textview_creation_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/creation_port"
        app:layout_constraintStart_toStartOf="@+id/textInput_port_field"
        app:layout_constraintTop_toBottomOf="@+id/textInput_server_name_field" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_hostname_field" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInput_server_name_field"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/creation_server_name_field"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_creation_server_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInput_hostname_field"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/creation_hostname_field"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_creation_hostname" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInput_ipv4_field"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:hint="@string/creation_ipv4_field"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_creation_ipv4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInput_port_field"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/creation_port_field"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInput_ipv4_field"
        app:layout_constraintTop_toBottomOf="@+id/textview_creation_port" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="24dp"
        android:layout_height="14dp"
        app:constraint_referenced_ids="textview_creation_server_name,textInput_server_name_field,textview_creation_ipv4,textview_creation_port,textInput_ipv4_field,textInput_port_field,textview_creation_hostname,textInput_hostname_field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>