<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.f5_davies_garcia_lamoureux_minecraftserverviewer.Fragments.HomeFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_addServerFragment"
            app:destination="@id/addServerFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_serverDetailsFragment"
            app:destination="@id/serverDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/addServerFragment"
        android:name="com.example.f5_davies_garcia_lamoureux_minecraftserverviewer.Fragments.AddServerFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_add_server" />
    <fragment
        android:id="@+id/serverDetailsFragment"
        android:name="com.example.f5_davies_garcia_lamoureux_minecraftserverviewer.Fragments.ServerDetailsFragment"
        android:label="@string/fragment_server_details_label"
        tools:layout="@layout/fragment_server_details" />
</navigation>